--- a/components/header.html
+++ b/components/header.html
@@ -1,8 +1,10 @@
-<h1>Vanilla Web</h1>
-<nav>
-  <ul>
-    <li><a href="index.html">home</a></li>
-    <li><a href="about.html">about</a></li>
-    <li><a href="contact.html">contact</a></li>
-  </ul>
-</nav>
+<header>
+  <h1>Vanilla Web</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li><a href="about.html">about</a></li>
+      <li><a href="contact.html">contact</a></li>
+    </ul>
+  </nav>
+</header>
